--- a/wan/src/main/res/layout/fragment_navi_mine.xml
+++ b/wan/src/main/res/layout/fragment_navi_mine.xml
@@ -19,8 +19,7 @@
         <ImageView
             android:id="@+id/iv_bg"
             android:layout_width="match_parent"
-            android:layout_height="260dp"
-            android:background="@drawable/ic_bg_mine_head" />
+            android:layout_height="260dp"/>
 
 
         <LinearLayout
