--- a/wan/src/main/res/layout/layout_fragment_mine_layouts.xml
+++ b/wan/src/main/res/layout/layout_fragment_mine_layouts.xml
@@ -28,6 +28,7 @@
             android:tint="@color/main" />
 
         <TextView
+
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -39,7 +40,7 @@
             android:textSize="@dimen/text_content" />
 
         <TextView
-            android:id="@+id/tv_coin"
+            android:id="@+id/tvMyCoinCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
