--- a/wan/src/main/res/layout/activity_mine_my_coin_list_item.xml
+++ b/wan/src/main/res/layout/activity_mine_my_coin_list_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="@dimen/all_width_height"
     android:background="@color/white"
@@ -9,17 +9,33 @@
 
 
     <TextView
-        android:id="@+id/tv_title"
+        android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/text_33"
+        android:textSize="@dimen/big_text_x"
         tools:text="签到"
         />
+    <TextView
+        android:id="@+id/tvCreateTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvTitle"
+        android:textColor="@color/text_99"
+        android:textSize="@dimen/standard_text"
+        tools:text="2020"
+        />
 
-    <!--<TextView-->
-        <!--android:id="@+id/tv_coin_count"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--tools:text="+31"-->
-        <!--/>-->
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/tvCoinCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:textColor="@color/text_33"
+        android:textSize="@dimen/big_text_x"
+        tools:text="+31"
+        />
+
+</RelativeLayout>
