--- a/wan/src/main/res/layout/activity_mine_my_rank.xml
+++ b/wan/src/main/res/layout/activity_mine_my_rank.xml
@@ -31,7 +31,7 @@
                 android:layout_centerInParent="true"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="我的积分"
+                android:text="@string/my_coin"
                 android:textColor="@color/white"
                 android:textSize="@dimen/title_size" />
 
