--- a/wan/src/main/res/layout/activity_wan_setting.xml
+++ b/wan/src/main/res/layout/activity_wan_setting.xml
@@ -34,7 +34,7 @@
                 android:maxLines="1"
                 android:textColor="@color/white"
                 android:textSize="@dimen/title_size"
-                android:text="设置" />
+                android:text="@string/setting_language" />
 
 
             <FrameLayout
@@ -57,6 +57,58 @@
             </FrameLayout>
 
         </RelativeLayout>
+    </LinearLayout>
+    <View
+        style="@style/Line" />
+
+    <!-- 第7排  setting_language -->
+    <LinearLayout
+        android:id="@+id/ll_language"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/bg_press_color_surface"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
+
+        <!--<ImageView-->
+        <!--android:layout_width="18dp"-->
+        <!--android:layout_height="18dp"-->
+        <!--android:scaleType="fitCenter"-->
+        <!--android:src="@drawable/ic_setting"-->
+        <!--android:tint="@color/main" />-->
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:singleLine="true"
+            android:text="@string/setting_language"
+            android:textColor="@color/text_surface"
+            android:textSize="@dimen/text_content" />
+
+        <TextView
+            android:id="@+id/tv_language"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:singleLine="true"
+            android:text=""
+            android:textColor="@color/text_third"
+            android:textSize="@dimen/text_notes"
+            tools:text="@string/simplified_chinese" />
+
+        <ImageView
+            android:layout_width="13dp"
+            android:layout_height="13dp"
+            android:rotation="180"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_back"
+            android:tint="@color/third" />
+
     </LinearLayout>
 
 
@@ -116,6 +168,7 @@
         android:id="@+id/ll_logout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/bg_press_color_surface"
         android:gravity="center"
         android:orientation="horizontal"
@@ -124,23 +177,15 @@
 
 
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
             android:singleLine="true"
-            android:text="退出"
-            android:textColor="@color/text_surface"
-            android:textSize="@dimen/text_content" />
+            android:gravity="center"
+            android:text="@string/exit"
+            android:textColor="@color/colorGitHubGreenPress"
+            android:textSize="@dimen/big_text_x" />
 
-        <ImageView
-            android:layout_width="13dp"
-            android:layout_height="13dp"
-            android:rotation="180"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_back"
-            android:tint="@color/third" />
+
 
     </LinearLayout>
 
