--- a/wan/src/main/res/layout/fragment_navi_home.xml
+++ b/wan/src/main/res/layout/fragment_navi_home.xml
@@ -46,7 +46,7 @@
                 android:layout_centerInParent="true"
                 android:ellipsize="end"
                 android:maxLines="1"
-                tools:text="首页"
+                tools:text="@string/home"
                 android:textColor="@color/white"
                 android:textSize="@dimen/title_size" />
 
@@ -84,7 +84,6 @@
             android:id="@+id/banner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/pic_404"
             app:autoPlayDuration="5000"
             app:defaultImage="@drawable/pic_404"
             app:indicatorMargin="8dp"
