--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -2,28 +2,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vpGuide"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
 
     <TextView
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="70dp"
-        android:padding="10dp"
         android:id="@+id/tvStart"
-        android:textColor="@color/colorGitHubGreen"
-        android:background="@drawable/water_effect_green_border_white_solid_selector"
-        android:text="开始体验黑洞"
-        android:textSize="@dimen/standard_text"
-        android:visibility="invisible"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="70dp"
+        android:background="@drawable/water_effect_green_border_white_solid_selector"
+        android:padding="10dp"
+        android:text="开始体验黑洞"
+        android:textColor="@color/colorGitHubGreen"
+        android:textSize="@dimen/standard_text"
+        android:visibility="invisible" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -39,11 +37,12 @@
             android:orientation="horizontal">
 
         </LinearLayout>
+
         <ImageView
             android:id="@+id/ivGuidePoint"
-            android:src="@drawable/guide_red_cycle_shape"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:src="@drawable/guide_red_cycle_shape" />
 
     </RelativeLayout>
 </RelativeLayout>
