--- a/basic_core/src/main/res/layout/title.xml
+++ b/basic_core/src/main/res/layout/title.xml
@@ -14,8 +14,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:background="@color/colorGitHubBlack"
-        >
+        android:background="@color/colorGitHubBlack">
 
         <FrameLayout
             android:id="@+id/fl_back"
@@ -32,10 +31,8 @@
                 android:layout_marginLeft="@dimen/dp_10"
                 android:gravity="center"
                 android:src="@mipmap/ic_back"
-                android:visibility="gone"
-                 />
+                android:visibility="gone" />
         </FrameLayout>
-
 
 
         <TextView
@@ -45,15 +42,15 @@
             android:layout_centerInParent="true"
             android:ellipsize="end"
             android:maxLines="1"
-            tools:text="标题"
             android:textColor="@color/white"
-            android:textSize="@dimen/title_size" />
+            android:textSize="@dimen/title_size"
+            tools:text="标题" />
 
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginRight="@dimen/standard_padding"
-            android:layout_alignParentRight="true">
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/standard_padding">
 
             <TextView
                 android:id="@+id/tv_right"
@@ -64,9 +61,9 @@
                 android:layout_marginLeft="8dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:gravity="center|right"
-                tools:text="右"
                 android:textColor="@color/white"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                tools:text="右" />
 
             <ImageView
                 android:id="@+id/iv_right"
@@ -74,9 +71,8 @@
                 android:layout_height="18dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:visibility="gone"
                 android:gravity="center"
-                />
+                android:visibility="gone" />
         </FrameLayout>
 
 
