--- a/wan/src/main/res/layout/activity_mine_about_me.xml
+++ b/wan/src/main/res/layout/activity_mine_about_me.xml
@@ -31,20 +31,18 @@
                 android:layout_height="wrap_content"
                 android:src="@mipmap/beauty03"
                 />
-<!--            <ImageView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:src="@mipmap/beauty04"-->
-<!--                />-->
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/beauty04"
+                />
 
 
-<!--            <ImageView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:scaleType="fitXY"-->
-<!--                android:layout_marginTop="10dp"-->
-<!--                android:src="@drawable/ic_alipay"-->
-<!--                />-->
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_alipay"
+                />
 
 
 
