--- a/wan/src/main/res/layout/activity_wan_splash.xml
+++ b/wan/src/main/res/layout/activity_wan_splash.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/clContainer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.transcendence.wan.module.main.act.WanMainActivity">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/ivLauncher"
