--- a/wan/src/main/res/values/styles.xml
+++ b/wan/src/main/res/values/styles.xml
@@ -84,6 +84,12 @@
         <item name="android:paddingBottom">4dp</item>
         <item name="android:textColor">@color/tab_text_color_selector</item>
         <item name="android:background">@drawable/water_effect_selector</item>
-    </style>"
+    </style>
+
+
+    <style name="SaveImageDialogTheme" parent="Base.AlertDialog.AppCompat">
+        <item name="android:windowEnterAnimation">@anim/fade_in_from_bottom</item>
+        <item name="android:windowExitAnimation">@anim/fade_out_to_bottom</item>
+    </style>
 
 </resources>
